<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RecipeSearchFragment">

    <RelativeLayout
        android:id="@+id/fragment_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewDish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="63dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="649dp"
            android:text="@string/textViewDish"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/searcheditText"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="74dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="636dp"
            android:ems="10"
            android:hint="@string/searcheditText"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewAddIngredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="116dp"
            android:layout_marginEnd="252dp"
            android:layout_marginBottom="596dp"
            android:text="@string/textViewAddIngredients"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/ingredients_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="175dp"
            android:layout_marginStart="15dp"/>

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="164dp"
            android:text="@string/searchButton"
            android:layout_below="@+id/ingredients_recyclerView"/>

    </RelativeLayout>
</FrameLayout>